<resources>
    <string name="app_name">Pocket Paper</string>

    <!--Pages and titles -->
    <string name="title_tasks_fragment">Tasks</string>
    <string name="title_notes_fragment">Notes</string>
    <string name="title_purchases_fragment">Purchases</string>
    <string name="title_finances_fragment">Finances</string>
    <string name="title_current_tasks_fragment">Current tasks</string>
    <string name="all_tasks">All tasks</string>
    <string name="main_page_title">Home</string>
    <string name="habits">Habits</string>

    <!-- Different buttons content descriptions -->
    <string name="new_task_button_description">Add task</string>
    <string name="save_task_button_description">Save task</string>
    <string name="save_note_button_description">Save note</string>
    <string name="save_item_button_description">Save item</string>
    <string name="save_list_button_description">Save list</string>
    <string name="new_note_button_description">Add note</string>
    <string name="back_button_description">Back</string>
    <string name="set_date_button_description">Set date</string>
    <string name="set_time_button_description">Set time</string>
    <string name="notes_fragment_button_description">Open notes</string>
    <string name="purchases_fragment_button_description">Open purchases</string>

    <!--Text messages in dialogs -->
    <string name="cancel_warning_message">(This action cannot be undone!)</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="delete_note">Delete note</string>
    <string name="deleted">Deleted</string>
    <string name="untitled">Untitled</string>
    <string name="empty_note_text">The text of the note cannot be blank</string>
    <string name="empty_name">The title cannot be empty</string>
    <string name="delete_task">Delete task</string>

    <!--Task status titles -->
    <string name="active_tasks">Active</string>
    <string name="completed_tasks">Completed</string>
    <string name="missed_tasks">Missed</string>

    <!--Task's tags name -->
    <string name="general_tag_text">General</string>
    <string name="personal_tag_text">Personal</string>
    <string name="work_tag_text">Work</string>
    <string name="study_tag_text">Study</string>

    <string name="today">Today</string>
    <string name="time">Time</string>
    <string name="tomorrow">Tomorrow</string>
    <string name="open_all">Open all</string>
    <string name="today_tasks">Tasks for today</string>
    <string name="favorites">Favorites</string>
    <string name="settings">Settings</string>
    <string name="calendar">Calendar</string>
    <string name="app_theme_mode">Application theme</string>
    <string name="restart_required">Restart required</string>
    <string name="empty_task_list_message">Nothing is planned for this day</string>
    <string name="note">Note</string>
    <string name="name_hint">Name</string>
    <string name="note_text_hint">Note text</string>
    <string name="add_new_item_hint">Add an item</string>
    <string name="new_list_hint">New list</string>
    <string name="new_task">New task</string>
    <string name="new_note">New note</string>
    <string name="tasks_on_date">Tasks for selected date</string>
    <string name="expand">Expand</string>
    <string name="collapse">Collapse</string>
    <string name="changed">Changed</string>
    <string name="old_not_change">The old cannot be changed</string>
    <string name="delete_habit">Delete habit</string>
    <string name="new_habit">New habit</string>
    <string name="description">Description</string>
    <string name="start_date">Start date</string>
    <string name="details">Details</string>
    <string name="current_date">Current date</string>
    <string name="no_description">No description</string>
    <string name="save">Save</string>
    <string name="edit">Edit</string>
    <string name="done">Done</string>
    <string name="apply">Apply</string>
    <string name="empty_note_deleted">Empty note deleted</string>
    <string name="add_description_text">Add a description for the task</string>
    <string name="share">Share</string>
    <string name="list">List</string>
    <string name="date_and_time">Date and time</string>
    <string name="tag">Tag</string>
    <string name="all">All</string>
    <string name="begin">Begin</string>

    <string name="rate_app">Rate the app</string>
    <string name="recommend_app">Recommend the app</string>
    <string name="report_bug">Report a bug</string>

    <string name="all_task_completed_text">You have completed all tasks for today</string>
    <string name="nothing_added_text">You have not added anything</string>
    <string name="click_to_record">Click to record</string>
    <string name="nothing_planned_today_text">You have nothing planned for today</string>
    <string name="click_to_add_task_text">Click to add a new task</string>

    <string name="welcome_to_app">Welcome to\nPocket Paper</string>

    <string name="share_recommendation_text">I use the Pocket Paper app to keep a to-do list.</string>
    <string name="try_app_text">Try the app:</string>
    <string name="app_description">All your to-do lists, shopping lists and notes in one place.</string>


    <string name="plan_your_day_text">Plan your day</string>
    <string name="add_tasks_to_list_text">Add tasks for any day</string>
    <string name="add_notes_text">Add notes</string>
    <string name="record_information_text">Write down the information you need so you dont forget</string>
    <string name="track_your_habits_text">Track your habits</string>
    <string name="track_in_calendar_text">Keep track of progress on the calendar</string>

    <string-array name="finance_spent_categories">
        <item>Products</item>
        <item>Car</item>
        <item>House</item>
        <item>Services</item>
        <item>Clothes</item>
        <item>Entertainment</item>
        <item>Transport</item>
        <item>Health</item>
        <item>Other</item>
    </string-array>
    <string-array name="finance_receive_categories">
        <item>Salary</item>
        <item>Gift</item>
        <item>Investing</item>
        <item>Other</item>
    </string-array>
    <string name="finance_transaction_type_spent">Expenses</string>
    <string name="finance_transaction_type_receive">Revenues</string>
</resources>