<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="fragment"
            type="com.baleshapp.pocketpaper.view.mainpage.MainPageFragment" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.appcompat.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:contentInsetEnd="16dp">

            <TextView
                android:id="@+id/current_tasks_title"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_marginTop="20dp"
                android:text="@string/main_page_title"
                android:textColor="?attr/text_color_attr"
                android:textSize="28sp" />

            <ImageButton
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:layout_gravity="end"
                android:layout_marginTop="20dp"
                android:background="@android:color/transparent"
                android:contentDescription="@string/new_task_button_description"
                android:onClick="@{() -> fragment.createNewTask()}"
                android:scaleType="fitXY"
                android:src="@drawable/ic_baseline_add_24"
                app:tint="?attr/button_color_attr" />

        </androidx.appcompat.widget.Toolbar>

        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:columnCount="2"
            android:paddingHorizontal="10dp"
            android:rowCount="2">

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_columnSpan="2"
                android:layout_margin="6dp"
                android:background="@drawable/custom_layout_shape"
                android:backgroundTint="@color/yellow"
                android:elevation="6dp"
                android:onClick="@{() -> fragment.openNotesPage()}"
                android:padding="6dp">

                <ImageView
                    android:id="@+id/note_icon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/notes_fragment_button_description"
                    android:src="@drawable/ic_baseline_sticky_note_2_24" />

                <ImageView
                    android:id="@+id/note_arrow"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:src="@drawable/ic_baseline_arrow_right_24"
                    tools:ignore="ContentDescription" />

                <TextView

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/note_icon"
                    android:layout_marginTop="6dp"
                    android:text="@string/title_notes_fragment"
                    android:textColor="@color/white"
                    android:textSize="16sp" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"

                android:layout_columnWeight="1"
                android:layout_margin="6dp"
                android:background="@drawable/custom_layout_shape"
                android:backgroundTint="@color/violet"
                android:elevation="6dp"
                android:onClick="@{() -> fragment.openPurchasesPage()}"
                android:padding="6dp">

                <ImageView
                    android:id="@+id/purchase_icon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/purchases_fragment_button_description"
                    android:src="@drawable/ic_baseline_shopping_basket_24" />

                <ImageView
                    android:id="@+id/purchase_arrow"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:src="@drawable/ic_baseline_arrow_right_24"
                    tools:ignore="ContentDescription" />

                <TextView

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/purchase_icon"
                    android:layout_marginTop="6dp"
                    android:text="@string/title_purchases_fragment"
                    android:textColor="@color/white"
                    android:textSize="16sp" />

            </RelativeLayout>

        </GridLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="20dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/today_tasks"
                android:textColor="?attr/text_color_attr"
                android:textSize="16sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="1dp"
                android:layout_marginTop="1dp"
                android:layout_marginEnd="1dp"
                android:layout_marginBottom="1dp"
                android:background="@drawable/custom_layout_shape"
                android:elevation="1dp"
                android:onClick="@{() -> fragment.openAllTasks()}"
                android:padding="4dp"
                android:text="@string/open_all"
                android:textColor="?attr/text_color_attr"
                android:textSize="12sp"
                tools:ignore="RelativeOverlap" />

        </RelativeLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/tasks_recycler_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="12dp"
            android:elevation="2dp"
            android:paddingHorizontal="13dp"
            app:layout_behavior="@string/appbar_scrolling_view_behavior" />

    </LinearLayout>

</layout>