<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="fragment"
            type="com.baleshapp.pocketpaper.view.SettingsFragment" />

        <import type="android.view.View" />
    </data>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".view.SettingsFragment">

        <androidx.appcompat.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/settings_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/settings"
                android:textColor="?attr/text_color_attr"
                android:textSize="28sp" />

        </androidx.appcompat.widget.Toolbar>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:gravity="center"
            android:text="@string/app_name"
            android:textColor="?attr/text_color_attr"
            android:textSize="30sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:gravity="center"
            android:text="@{fragment.versionName}"
            android:textColor="?attr/text_color_attr"
            android:textSize="16sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:text="@string/app_description"
            android:textColor="?attr/text_color_attr"
            android:textSize="20sp" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="12dp"
            android:layout_marginTop="40dp"
            android:background="@drawable/custom_layout_shape"
            android:paddingVertical="6dp">

            <TextView
                android:id="@+id/app_theme_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginStart="16dp"
                android:text="@string/app_theme_mode"
                android:textColor="?attr/text_color_attr"
                android:textSize="18sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginStart="6dp"
                android:layout_toEndOf="@id/app_theme_text"
                android:text="@string/restart_required"
                android:textColor="@color/crimson"
                android:textSize="12sp"
                android:visibility="@{fragment.themeChanged ? View.VISIBLE : View.GONE}"
                tools:ignore="RelativeOverlap" />

            <ImageButton
                android:id="@+id/app_theme_mode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="12dp"
                android:background="@android:color/transparent"
                android:onClick="@{() -> fragment.setThemeMode()}"
                android:scaleType="fitXY"
                app:tint="?attr/button_color_attr"
                tools:ignore="ContentDescription" />
        </RelativeLayout>

    </LinearLayout>
</layout>