<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="note"
            type="com.baleshapp.pocketpaper.data.model.Note" />

        <variable
            name="dialog"
            type="com.baleshapp.pocketpaper.view.note.dialogs.NoteDialog" />
    </data>

    <LinearLayout
        android:id="@+id/note_detail_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/custom_shape_bottom_sheet_dialog"
        android:orientation="vertical"
        android:paddingHorizontal="12dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/title_notes_detail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_weight="7"
                android:text="@string/note"
                android:textColor="?attr/text_color_attr"
                android:textSize="22sp" />

            <ImageButton
                android:id="@+id/save_note_button_bottom_sheet"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:contentDescription="@string/save_note_button_description"
                android:onClick="@{() -> dialog.changeNote()}"
                android:src="@drawable/ic_baseline_done_24"
                app:tint="?attr/button_color_attr" />
        </LinearLayout>


        <EditText
            android:id="@+id/note_input_name"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="10dp"
            android:backgroundTint="@android:color/transparent"
            android:hint="@string/name_hint"
            android:importantForAutofill="no"
            android:inputType="textNoSuggestions|textCapSentences"
            android:paddingStart="8dp"
            android:paddingEnd="0dp"
            android:text="@={note.name}"
            android:textColor="?attr/text_color_attr"
            android:textColorHint="@color/light_grey"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/note_input_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@android:color/transparent"
            android:ems="10"
            android:gravity="top"
            android:hint="@string/note_text_hint"
            android:importantForAutofill="no"
            android:inputType="textMultiLine|textCapSentences|textNoSuggestions"
            android:minHeight="120dp"
            android:padding="8dp"
            android:text="@={note.text}"
            android:textAlignment="gravity"
            android:textColor="?attr/text_color_attr"
            android:textColorHint="@color/light_grey"
            android:textSize="16sp" />
    </LinearLayout>

</layout>