<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

        <variable
            name="fragment"
            type="com.baleshapp.pocketpaper.view.purchase.PurchaseFragment" />
    </data>

    <LinearLayout xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/fragment_linear_layout_purchases"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="?attr/window_background_color_attr"
        android:orientation="vertical">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/purchases_category_fragment_toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/purchases_back_button"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginStart="24dp"
                android:contentDescription="@string/back_button_description"
                android:onClick="@{() -> fragment.onBack()}"
                android:src="@drawable/ic_baseline_arrow_back_ios_24"
                app:tint="?attr/button_color_attr" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_purchases_fragment"
                android:textColor="?attr/text_color_attr"
                android:textSize="24sp" />

            <ImageButton
                android:id="@+id/add_shopping_list_category"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_gravity="end"
                android:layout_marginEnd="12dp"
                android:background="@android:color/transparent"
                android:contentDescription="@string/new_task_button_description"
                android:onClick="@{() -> fragment.createNewList()}"
                android:src="@drawable/ic_baseline_playlist_add_24"
                app:tint="?attr/button_color_attr" />

        </androidx.appcompat.widget.Toolbar>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/purchase_list_recycler_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="6dp"
            android:layout_marginTop="12dp"
            android:elevation="2dp"
            android:paddingStart="6dp"
            android:paddingEnd="6dp"
            app:layout_behavior="@string/appbar_scrolling_view_behavior" />

    </LinearLayout>
</layout>